--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+            android:name=".SeriesApplication"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:allowBackup="true"
             android:icon="@drawable/ic_app_stock"
             android:label="@string/app_name"
